--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -5,12 +5,13 @@
 
 .greeting {
     text-align: center;
-    background-color: transparent;
+    background-color: rgb(0, 122, 126) !important;
     color: white;
 }
 
 .logout-btn {
     width: 150px;
+    height: auto;
     border-radius: 3px;
     letter-spacing: 1.5px;
     background-color: rgb(64, 0, 120);
