--- a/client/src/components/auth/Login.css
+++ b/client/src/components/auth/Login.css
@@ -7,7 +7,7 @@
     color:  rgb(64, 0, 120);
     background-color: white;
     margin-top: 50px;
-    padding-bottom: 22px;
+    padding-bottom: 22px !important;
 }
 
 .sign-up {
