--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
+@font-face {
+  font-family: 'Sahar-Regular';
+  font-style: normal;
+  src: url('./Assets/Fonts/Sahar-Regular.eot'); /* IE9 Compat Modes */
+  src: local('Sahar-Regular'), local('Sahar-Regular'),
+       url('./Assets/Fonts/Sahar-Regular.eot') format('embedded-opentype'), /* IE6-IE8 */
+       url('./Assets/Fonts/Sahar-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./Assets/Fonts/Sahar-Regular.woff') format('woff'), /* Modern Browsers */
+       url('./Assets/Fonts/Sahar-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+  font-family: 'Sahar-Regular';
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
   background-color: rgb(0, 122, 126) !important;
 }
 
