--- a/client/src/components/Nav/Navbar.css
+++ b/client/src/components/Nav/Navbar.css
@@ -2,11 +2,11 @@
     min-height: 200px;
     background-color: rgb(19, 19, 19);
 }
-
-.nav-link {
+.nav-text{
+    padding-top: 25px !important;
     color: rgb(255, 255, 255)!important;
-    font-size: 20px;
-
+    font-size: 40px;
+    font-family: 'Ragila';
   }
 
   #our-nav{
