--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,31 @@
 @font-face {
+  font-family: 'Sahar-Bold';
+  font-style: normal;
+  src: url('./Assets/Fonts/Sahar-Bold.eot'); /* IE9 Compat Modes */
+  src: local('Sahar-Bold'),
+       url('./Assets/Fonts/Sahar-Bold.eot') format('embedded-opentype'), /* IE6-IE8 */
+       url('./Assets/Fonts/Sahar-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./Assets/Fonts/Sahar-Bold.woff') format('woff'), /* Modern Browsers */
+}
+@font-face {
   font-family: 'Sahar-Regular';
   font-style: normal;
   src: url('./Assets/Fonts/Sahar-Regular.eot'); /* IE9 Compat Modes */
-  src: local('Sahar-Regular'), local('Sahar-Regular'),
+  src: local('Sahar-Regular'), 
        url('./Assets/Fonts/Sahar-Regular.eot') format('embedded-opentype'), /* IE6-IE8 */
        url('./Assets/Fonts/Sahar-Regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('./Assets/Fonts/Sahar-Regular.woff') format('woff'), /* Modern Browsers */
        url('./Assets/Fonts/Sahar-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
 }
+@font-face {
+  font-family: 'Ragila', serif;
+  font-style: normal;
+  src: local('Ragila'), 
+       url('./Assets/Fonts/Ragila.otf') format('embedded-opentype'), /* IE6-IE8 */
+       url('./Assets/Fonts/Ragila.woff') format('woff'), /* Modern Browsers */
+       url('./Assets/Fonts/Ragila.ttf') format('truetype'), /* Safari, Android, iOS */
+}
+
 
 body {
   margin: 0;
