--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,20 @@
 .footer {
     background-color: black;
     padding-top: 20px;
-    padding-bottom: 20px;
     margin: auto;
+    position: fixed;
+    bottom: 0;
+}
+
+h1{
+    font-family: 'Ragila';
+    color: white;
+}
+
+li {
+    color: white;
+}
+
+a{
+    color:rgb(205, 205, 205) !important;
 }
