--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -18,14 +18,6 @@
     float: left;
     
 }
-#cc{
-    color: rgb(94, 94, 94);
-    float: left;
-    font-size: smaller;
-    margin-left: 10px
-    position: fixed;
-    bottom: 0;
-}
 
 h1{
     font-family: 'Ragila';
@@ -38,4 +30,9 @@ li {
 
 a{
     color:rgb(205, 205, 205) !important;
+}
+#ccf{
+    margin-left: 10px;
+    float: left;
+    color: rgb(94, 94, 94);
 }
